--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -1,2 +1,11 @@
+$primary-color: #ddd!default;
+
 $general-bg-color: #f9f9f9!default;
-$general-font-family: 'Lato', sans-serif;
+$general-font-family: 'Open Sans', sans-serif!default;
+$heading-font-family: 'Nunito', sans-serif!default;
+
+/*
+  Login form
+ */
+$lf-width: 400px!default;
+$lf-min-height: 350px!default;
