--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,7 +5,45 @@
 }
 
 body {
+  position: relative;
   min-height: 100vh;
   font-family: $general-font-family;
-  background-color: $general-bg-color;
+  background: #{$general-bg-color} linear-gradient(135deg, #5dcbff, #26b6ce);
+  overflow: hidden;
+
+  &:after {
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 50vh;
+    background-color: #2e82ca;
+    box-shadow: inset 0 0 70px rgba(0, 0, 0, 0.2);
+    transform: rotate(-7deg) scale(1.5);
+    transform-origin: top right;
+    z-index: -1;
+  }
+}
+
+/**
+  General
+ */
+.lf-card {
+  padding: 1rem;
+  border-radius: 3px;
+  background-color: #ffffff;
+  box-shadow: 0px 15px 100px 0px rgba(0, 0, 0, 0.3);
+}
+
+/**
+  Forms
+ */
+.lf-field-group {
+  margin-bottom: 1.2rem;
+
+  input {
+    display: block;
+    width: 100%;
+  }
 }
