--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -1,4 +1,4 @@
-<div class="lf-card">
+<div class="lf-card" [@fadeCardIn]="'in'">
   <header class="lf-login-header">
     <h1>Sign in</h1>
     <p>to the dashboard</p>
@@ -6,14 +6,25 @@
   <form class="lf-login-form" [formGroup]="loginForm">
     <div class="lf-field-group"
          [ngClass]="{ 'valid': email.valid, 'invalid': email.invalid, 'empty': !email.value }"
-         [lfFieldFocus]="email">
+         [lfIsFieldFocused]="email">
       <label for="lf-login-email">E-mail</label>
-      <input id="lf-login-email" type="email" formControlName="email" #email>
+      <input id="lf-login-email" type="email" formControlName="email" placeholder="E-mail" lfFocusOnInit #email>
     </div>
 
-    <div class="lf-field-group" [ngClass]="{ 'valid': password.valid, 'invalid': password.invalid, 'empty': !password.value }">
+    <div class="lf-field-group"
+         [ngClass]="{ 'valid': password.valid, 'invalid': password.invalid, 'empty': !password.value }"
+         [lfIsFieldFocused]="password">
       <label for="lf-login-password">Password</label>
-      <input id="lf-login-password" type="password" formControlName="password">
+      <input id="lf-login-password" type="password" formControlName="password" placeholder="Password" #password>
+    </div>
+
+    <div class="lf-field-submission">
+      <label for="lf-login-remember" class="lf-field-checkbox" [ngClass]="{ 'checked': remember.value }">
+        <input id="lf-login-remember" type="checkbox" formControlName="remember">
+        <span>Tick to remember</span>
+      </label>
+
+      <button class="lf-btn lf-btn-submit" type="submit">Log In</button>
     </div>
   </form>
 </div>
