--- a/src/styles.scss
+++ b/src/styles.scss
@@ -33,17 +33,176 @@ body {
   padding: 1rem;
   border-radius: 3px;
   background-color: #ffffff;
-  box-shadow: 0px 15px 100px 0px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 15px 100px 0 rgba(0, 0, 0, 0.3);
+}
+
+/**
+  Buttons
+ */
+.lf-btn {
+  display: inline-block;
+  background-color: transparent;
+  border: none;
+  box-shadow: none;
+  outline: none;
+}
+
+.lf-btn-submit {
+  position: relative;
+  padding: 0.8rem 1.5rem;
+  color: #fff;
+  border-radius: 3px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+  overflow: hidden;
+  transition: box-shadow .5s ease-in-out;
+  cursor: pointer;
+  z-index: 10;
+
+  &::before {
+    content: ' ';
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 200%;
+    width: 200%;
+    background-image: linear-gradient(135deg, #77d8ab, #4ddeff);
+    transform: translate(0, 0);
+    transition: transform .5s ease-in-out;
+    z-index: -1;
+  }
+
+  &:hover {
+    box-shadow: 0 0 30px rgba(0, 0, 0, .25);
+
+    &::before {
+      transform: translate(-45%, -45%);
+    }
+  }
 }
 
 /**
   Forms
  */
 .lf-field-group {
+  position: relative;
   margin-bottom: 1.2rem;
+
+  &::after {
+    content: ' ';
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    display: block;
+    height: 2px;
+    width: 0;
+    background-color: #767d7f;
+    transition: width .2s ease-in-out;
+  }
+
+  label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 13px;
+    color: #666;
+    opacity: 0;
+    visibility: hidden;
+    transform: translateY(5px);
+    transition: all .2s ease-in-out;
+  }
 
   input {
     display: block;
     width: 100%;
+    padding: 0.8rem 0;
+    border: none;
+    border-bottom: 2px solid #{$primary-color};
+    outline: none;
   }
+
+  &:not(.empty) {
+    label {
+      opacity: 1;
+      visibility: visible;
+      transform: translateY(-5px);
+    }
+  }
+
+  &.focused {
+    &::after {
+      width: 100%;
+    }
+  }
+}
+
+.lf-field-checkbox {
+  position: relative;
+  cursor: pointer;
+
+  &::before {
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    left: 0;
+    display: block;
+    width: 20px;
+    height: 20px;
+    background-color: transparent;
+    border: 1px solid #ddd;
+    transform: translateY(-50%);
+    transition: border-color .2s ease-in-out;
+  }
+
+  &::after {
+    content: ' ';
+    position: absolute;
+    top: 50%;
+    left: 4px;
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-color: #88e2b0;
+    transform: translateY(-50%) scale(0);
+    transition: transform .2s ease-in-out;
+  }
+
+  span {
+    position: relative;
+    top: -1px;
+    margin-left: 10px;
+    font-size: 14px;
+    color: #afafaf;
+    vertical-align: middle;
+    transition: color .2s ease-in-out;
+  }
+
+  input {
+    visibility: hidden;
+  }
+
+  &:hover {
+    span {
+      color: #666;
+    }
+  }
+
+  &.checked {
+    &::before {
+      border-color: #88e2b0;
+    }
+
+    &::after {
+      transform: translateY(-50%) scale(1);
+    }
+
+    span {
+      color: #333;
+    }
+  }
+}
+
+.lf-field-submission {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
