--- a/src/app/login/login-form/login-form.component.scss
+++ b/src/app/login/login-form/login-form.component.scss
@@ -1,9 +1,16 @@
 @import '../../../assets/scss/all';
 
-.lf-card {
+.lf-login-card {
   min-height: $lf-min-height;
   width: $lf-width;
   padding: 2.5rem;
+}
+
+.lf-card-success {
+  width: $lf-width;
+  padding: 2.5rem;
+  font-family: $heading-font-family;
+  font-size: 22px;
 }
 
 .lf-login-header {
