--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,3 @@
 <section class="lf-login">
-  <lf-login-form></lf-login-form>
+  <lf-login-form (onLogin)="onLogin($event)" [loading]="loading$ | async" [step]="step$ | async"></lf-login-form>
 </section>
