--- a/src/app/login/login.component.scss
+++ b/src/app/login/login.component.scss
@@ -1,7 +1,15 @@
+@import '../../assets/scss/all';
+
 .lf-login {
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   width: 100%;
+  padding: 2rem 0;
+
+  @include mobile() {
+    padding-left: 15px;
+    padding-right: 15px;
+  }
 }
