--- a/src/styles.scss
+++ b/src/styles.scss
@@ -45,6 +45,11 @@ main {
     text-align: center;
     background-color: #24b83f;
   }
+
+  &-failure {
+    color: #ffffff;
+    background-color: #ce4747;
+  }
 }
 
 /**
