--- a/src/app/login/login-form/login-form.component.html
+++ b/src/app/login/login-form/login-form.component.html
@@ -4,19 +4,27 @@
       <h1>Sign in</h1>
       <p>to the dashboard</p>
     </header>
-    <form class="lf-login-form" [formGroup]="loginForm" (ngSubmit)="onSubmit()">
+    <form class="lf-login-form" [formGroup]="loginForm" [ngClass]="{ 'loading': loading }" (ngSubmit)="onSubmit()">
       <div class="lf-field-group"
-           [ngClass]="{ 'valid': email.valid, 'invalid': email.invalid, 'empty': !email.value }"
-           [lfIsFieldFocused]="email">
+           [ngClass]="{
+             'valid': email.valid,
+             'invalid': step === 'validation' && email.invalid,
+             'empty': !email.value
+           }"
+           [lfIsFieldFocused]="emailInput">
         <label for="lf-login-email">E-mail</label>
-        <input id="lf-login-email" type="email" formControlName="email" placeholder="E-mail" lfFocusOnInit #email>
+        <input id="lf-login-email" type="email" formControlName="email" placeholder="E-mail" lfFocusOnInit #emailInput>
       </div>
 
       <div class="lf-field-group"
-           [ngClass]="{ 'valid': password.valid, 'invalid': password.invalid, 'empty': !password.value }"
-           [lfIsFieldFocused]="password">
+           [ngClass]="{
+             'valid': password.valid,
+             'invalid': step === 'validation' && password.invalid,
+             'empty': !password.value
+           }"
+           [lfIsFieldFocused]="passwordInput">
         <label for="lf-login-password">Password</label>
-        <input id="lf-login-password" type="password" formControlName="password" placeholder="Password" #password>
+        <input id="lf-login-password" type="password" formControlName="password" placeholder="Password" #passwordInput>
       </div>
 
       <div class="lf-field-submission">
@@ -25,7 +33,9 @@
           <span>Tick to remember</span>
         </label>
 
-        <button class="lf-btn lf-btn-submit" type="submit">Log In</button>
+        <button class="lf-btn lf-btn-submit" type="submit" [disabled]="loading">
+          <span>Log In</span>
+        </button>
       </div>
     </form>
   </div>
