--- a/src/styles.scss
+++ b/src/styles.scss
@@ -19,9 +19,10 @@
 }
 
 body {
+  max-width: 100%;
   font-family: $general-font-family;
   background: #{$general-bg-color} linear-gradient(135deg, #5dcbff, #26b6ce);
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 main {
